New Files added

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,6 @@ body {
     background-image: url("../Artboard\ 1.png");
     background-repeat: no-repeat;
     background-size: cover;
-    background-color: #FF5733;
   }
 
 
@@ -15,18 +14,21 @@ body {
 
       .navbar .nav-link {
         background: transparent;
-        margin-top: 2rem;
+        margin-top: 1rem;
+      }
+
+      .navbar-collapse {
+        left: 10px;
       }
 
       .text-content {
         position: absolute;
         display: inline-block;
-        margin: 0;
-        width: 50px;
-        max-width:250px;
-        right: 0px;
+        left: 50%;
         top: 50%;
         padding: 5px;
         transform: translateY(-50%);
         -ms-transform: translateY(-50%);
+        z-index: 200;
+        
       }
